--- a/laokou-base/laokou-common/src/main/resources/i18n/messages_en_US.properties
+++ b/laokou-base/laokou-common/src/main/resources/i18n/messages_en_US.properties
@@ -50,3 +50,4 @@
 10047=There are multiple parallel tasks that cannot be rolled back
 10044=There are tasks in multiple processes that cannot terminate the process
 20001=You do not have permission to access, please contact the administrator
+20002=The service is being maintained, please contact the administrator
