perf: 基于tencent修改，后面维护Alibaba

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -19,7 +19,7 @@ https://blog.csdn.net/qq_40673687/article/details/103588011
 - [ ] 工作流绘制
 - [ ] 升级swagger-ui https://github.com/springdoc/springdoc-openapi(https://www.cnblogs.com/xiao2shiqi/p/16383896.html)
 - [ ] laokou-sms 需要增加内容
-- [ ] laokou-email 需要增加内容
+- [ ] laokou-mail 需要增加内容
 - [ ] laokou-job 需要增加内容（admin管理）
 - [ ] laokou-generator 需要增加内容
 - [x] 新增laokou-activity/laokou-flowable(workflow) 把代码从laokou-admin剥离出来 < launch、audit、claim、unclaim、diagram > task、definition< WorkTask或WorkDefinition（feign）assignee + diagramResource<AssigneeDTO AssigneeVO>
