--- a/待优化事项.md
+++ b/待优化事项.md
@@ -49,7 +49,7 @@ https://blog.csdn.net/qq_31905135/article/details/123837390
 - [x] 把没用的认证去掉，目前只支持密码（之前支持支付宝、单点登录、我后面想了一下，留接口扩展即可）
 - [x] 监听用户登录是否成功(@EventListener(AuthenticationSuccessEvent.class) > SysAuthApplicationServiceImpl (event)) '登录成功'(废弃)
 - [x] auth的相关信息改为i18n
-- [ ] 替换tomcat https://www.cnblogs.com/nuccch/p/13672294.html https://cloud.tencent.com/developer/article/1549199
+- [x] 替换tomcat https://www.cnblogs.com/nuccch/p/13672294.html https://cloud.tencent.com/developer/article/1549199
 tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，而且比较消耗资源，安装也比较繁琐，undertow的吞吐量高，相对也比较耗资源，相比于apr的安装繁琐，我比较能接受）
 - [ ] 用netty重写laokou-im
 - [ ] 存储过程开启事务
