--- a/待优化事项.md
+++ b/待优化事项.md
@@ -84,8 +84,9 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] netty实现文件服务
 - [ ] swagger注解补充
 - [ ] s3配置页面
+- [ ] 灰度发布（全链路灰色路由）
 - [ ] 字段脱敏、字段加密
-- [ ] sas原理：OAuth2TokenEndpointFilter -> OAuth2AuthorizationCodeAuthenticationConverter 
+- [x] sas原理：OAuth2TokenEndpointFilter -> OAuth2AuthorizationCodeAuthenticationConverter 
                                         -> OAuth2AuthorizationCodeAuthenticationToken 
                                         -> OAuth2AuthorizationCodeAuthenticationProvider
                                         -> OAuth2TokenEndpointFilter（sendAccessTokenResponse）
