--- a/待优化事项.md
+++ b/待优化事项.md
@@ -86,6 +86,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] s3配置页面
 - [ ] 灰度发布（全链路灰色路由）
 - [ ] 字段脱敏、字段加密
+- [ ] 中间表增加主键
 - [x] sas原理：OAuth2TokenEndpointFilter -> OAuth2AuthorizationCodeAuthenticationConverter 
                                         -> OAuth2AuthorizationCodeAuthenticationToken 
                                         -> OAuth2AuthorizationCodeAuthenticationProvider
