refactor: admin+flowable增加分布式事务seata

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -92,3 +92,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
                                         -> OAuth2AuthorizationCodeAuthenticationProvider
                                         -> OAuth2TokenEndpointFilter（sendAccessTokenResponse）
                                         优化sas
+- [ ] 使用vuepress写springcloudalibab手册（挂静态页面）
