refactor: 更新readme的图片

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -93,3 +93,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
                                         -> OAuth2TokenEndpointFilter（sendAccessTokenResponse）
                                         优化sas
 - [ ] 使用vuepress写springcloudalibab手册（挂静态页面）
+- [ ] 更新readme的图片
