--- a/待优化事项.md
+++ b/待优化事项.md
@@ -94,3 +94,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
                                         优化sas
 - [ ] 使用vuepress写springcloudalibab手册（挂静态页面）
 - [ ] 更新readme的图片
+- [ ] 更新数据库表接口
