refactor: 更新readme的图片

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -45,7 +45,7 @@ feign（用一个对象存储BaseUserVO）
 https://blog.csdn.net/qq_31905135/article/details/123837390
  https://blog.csdn.net/NewBeeMu/article/details/121162790 （修改redis的set）
 - [x] 修改登录日志实现方式
-- [ ] oss管理
+- [x] oss管理
 - [x] 把没用的认证去掉，目前只支持密码（之前支持支付宝、单点登录、我后面想了一下，留接口扩展即可）
 - [x] 监听用户登录是否成功(@EventListener(AuthenticationSuccessEvent.class) > SysAuthApplicationServiceImpl (event)) '登录成功'(废弃)
 - [x] auth的相关信息改为i18n
@@ -60,11 +60,11 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 敏感数据-密码不进行序列号 采用transient修饰
 - [ ] 思考路怎么走》》》》》》》》》》》》》》》》》》》》》》》》》》最最重要
 - [ ] 资源下载操作
-- [ ] kafka替换成rocketmq，为什么要替换？原因有以下两点，1.后期偏向业务，而且日志数据不是很多，用rocketmq好一点，2.数据实时并且支持重试，不然状态没法更新（https://blog.csdn.net/weixin_45537947/article/details/121802700）
+- [x] kafka替换成rocketmq，为什么要替换？原因有以下两点，1.后期偏向业务，而且日志数据不是很多，用rocketmq好一点，2.数据实时并且支持重试，不然状态没法更新（https://blog.csdn.net/weixin_45537947/article/details/121802700）
 - [ ] docker安装rocketmq和docker-compose（https://www.jb51.net/article/229157.htm）（https://www.jianshu.com/p/9ed30a99a50a）
 - [ ] 对照官网修改springsecurity，间接升级版本（https://spring.io/projects/spring-security）
 - [ ] 有点意思（https://gitee.com/majz0908/jarboot?utm_source=poper_profile）
-- [ ] 3.0.0升级（因3.0.0是一个大版本，前期的准备工作比较多，而且剔除了过期的接口，改的很多，需要发点时间）（优先级最低，不着急）(框架限制-oauth2密码模式，无法升级，只能在另一套阿里巴巴项目上面升到3.0.0)（迎难而上，不怕失败）(用provider，能够升级)（有新思路啦）（https://blog.csdn.net/tu_wer/article/details/124872706 + https://docs.spring.io/spring-authorization-server/docs/1.0.0/reference/html/core-model-components.html#registered-client）
+- [x] 3.0.0升级（因3.0.0是一个大版本，前期的准备工作比较多，而且剔除了过期的接口，改的很多，需要发点时间）（优先级最低，不着急）(框架限制-oauth2密码模式，无法升级，只能在另一套阿里巴巴项目上面升到3.0.0)（迎难而上，不怕失败）(用provider，能够升级)（有新思路啦）（https://blog.csdn.net/tu_wer/article/details/124872706 + https://docs.spring.io/spring-authorization-server/docs/1.0.0/reference/html/core-model-components.html#registered-client）
 - [ ] mybatis有这样的扩展类TypeHandler，然后根据这个写了个JasyptMybatisHandler
 - [ ] 分片上传
 - [ ] 其他依赖升级（保证最新）
@@ -98,4 +98,5 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 每个服务增加权限标识，openfeign增加header
 - [ ] 模板\邮件\短信
 - [ ] 多数据源\定时任务
-- [ ] 多租户对接，升级为saas系统
+- [ ] 多租户改造，升级为saas系统
+- [ ] 增加请求链路。一站式监控
