--- a/待优化事项.md
+++ b/待优化事项.md
@@ -101,3 +101,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 多租户改造，升级为saas系统
 - [ ] 增加请求链路。一站式监控（构建日志系统）
 - [ ] 基于mq的分布式事务实现（优化审批流程，响应时间过长的问题），开新分支开发
+- [ ] rocketmq代码有问题，需要花点时间（springboot 3.0有点问题）
