--- a/待优化事项.md
+++ b/待优化事项.md
@@ -93,14 +93,14 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
                                         -> OAuth2TokenEndpointFilter（sendAccessTokenResponse）
                                         优化sas
 - [ ] 使用vuepress写springcloudalibab手册（挂静态页面）
-- [ ] 更新readme的图片
-- [ ] 更新数据库表接口-2023/1/19
+- [x] 更新readme的图片
+- [x] 更新数据库表接口-2023/1/19
 - [ ] 每个服务增加权限标识，openfeign增加header
 - [ ] 模板\邮件\短信
 - [ ] 多数据源\定时任务代码补充
 - [ ] 多租户改造，升级为saas系统
 - [ ] 增加请求链路。一站式监控（构建日志系统）
 - [ ] 基于mq的分布式事务实现（优化审批流程，响应时间过长的问题），开新分支开发
-- [ ] rocketmq代码有问题，需要花点时间（springboot 3.0有点问题）
-- [ ] springboot自动配置 starter
-- [ ] laokou-log模块
+- [x] rocketmq代码有问题，需要花点时间（springboot 3.0有点问题）
+- [x] springboot自动配置 starter
+- [x] laokou-log模块
