--- a/待优化事项.md
+++ b/待优化事项.md
@@ -67,13 +67,13 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 3.0.0升级（因3.0.0是一个大版本，前期的准备工作比较多，而且剔除了过期的接口，改的很多，需要发点时间）（优先级最低，不着急）(框架限制-oauth2密码模式，无法升级，只能在另一套阿里巴巴项目上面升到3.0.0)（迎难而上，不怕失败）(用provider，能够升级)（有新思路啦）（https://blog.csdn.net/tu_wer/article/details/124872706 + https://docs.spring.io/spring-authorization-server/docs/1.0.0/reference/html/core-model-components.html#registered-client）
 - [ ] mybatis有这样的扩展类TypeHandler，然后根据这个写了个JasyptMybatisHandler
 - [ ] 分片上传
-- [ ] 其他依赖升级（保证最新）
+- [x] 其他依赖升级（保证最新）
 - [x] im增加message数据插入（mysql）（丢弃）
 - [x] 审批 > 审批日志表
 - [ ] 同步数据时带上时间戳（key = 业务key + 时间戳），防止redis出现死锁（分布式锁相关内容） + [spEL学习](https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#expressions)
 - [ ] java架构之道，往架构方向不断前进，绘图，原理，源码，设计（冲冲冲）
 - [x] 审批时把资源相关详情查询出来
-- [ ] 增加一个临时表，用来回滚资源审批不通过的资源信息
+- [x] 增加一个临时表，用来回滚资源审批不通过的资源信息
 - [ ] rocketmq增加事务（半消息）防止消息丢失（核心数据/涉及订单）（api购买）
 - [x] 减少公共类，单独出来(废弃，发现引用client能减少重复代码，还是提倡代码复用)
 - [x] 增加laokou-log服务，专门用来存储日志（登录、操作、审批、同步等等数据）
