--- a/待优化事项.md
+++ b/待优化事项.md
@@ -104,3 +104,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] rocketmq代码有问题，需要花点时间（springboot 3.0有点问题）
 - [x] springboot自动配置 starter
 - [x] laokou-log模块
+- [ ] 更新readme预览图片
