refactor: 更新mybatis-plus增加版本号，提交数据库初始化文件

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -79,7 +79,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 增加laokou-log服务，专门用来存储日志（登录、操作、审批、同步等等数据）
 - [x] 修改状态后，其他异步（链路过长优化）
 - [x] 增加数据同步日志（创建索引和同步数据分开）（一天只能同步一次然后锁定按钮，必须同步成功，后台加校验）(废弃)
-- [ ] redis分布式锁改为乐观锁，设置版本号(审批)
+- [x] 数据库表设置版本号
 - [x] 日志导出
 - [ ] netty实现文件服务
 - [ ] swagger注解补充
@@ -105,3 +105,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] springboot自动配置 starter
 - [x] laokou-log模块
 - [ ] 更新readme预览图片
+- [ ] 各个dto增加判空
