--- a/待优化事项.md
+++ b/待优化事项.md
@@ -16,7 +16,7 @@ https://blog.csdn.net/qq_40673687/article/details/103588011
 - [ ] 用户地图（百度地图api + 数据库ip + mongodb）
 - [ ] 微信公众号
 - [ ] sql优化
-- [ ] 工作流绘制
+- [ ] 工作流绘制页面
 - [ ] 升级swagger-ui https://github.com/springdoc/springdoc-openapi(https://www.cnblogs.com/xiao2shiqi/p/16383896.html)
 - [ ] laokou-sms 需要增加内容
 - [ ] laokou-mail 需要增加内容
@@ -97,7 +97,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 更新数据库表接口-2023/1/19
 - [ ] 每个服务增加权限标识，openfeign增加header
 - [ ] 模板\邮件\短信
-- [ ] 多数据源\定时任务代码补充
+- [ ] 定时任务代码补充
 - [ ] 多租户改造，升级为saas系统
 - [ ] 增加请求链路。一站式监控（构建日志系统）
 - [ ] 基于mq的分布式事务实现（优化审批流程，响应时间过长的问题），开新分支开发
