--- a/待优化事项.md
+++ b/待优化事项.md
@@ -105,4 +105,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] springboot自动配置 starter
 - [x] laokou-log模块
 - [ ] 更新readme预览图片
-- [ ] 各个dto增加判空
+- [x] 各个dto增加判空
