--- a/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages.properties
+++ b/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages.properties
@@ -1,4 +1,4 @@
-#\u7B80\u4F53\u4E2D\u6587
+#Default
 500=\u670D\u52A1\u5668\u5185\u90E8\u5F02\u5E38
 401=\u672A\u6388\u6743
 403=\u62D2\u7EDD\u8BBF\u95EE\uFF0C\u6CA1\u6709\u6743\u9650
@@ -64,3 +64,5 @@
 20013=不支持的认证类型
 20014=不支持的资源类型
 20015=访问被拒绝
+20016=租户未配置数据源
+20017=租户编号不为空
