--- a/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages_en_US.properties
+++ b/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages_en_US.properties
@@ -64,3 +64,5 @@
 20013=Unsupported authentication type
 20014=Unsupported resource type
 20015=Access denied
+20016=Tenant does not configure data source
+20017=Tenant number is not empty
