--- a/待优化事项.md
+++ b/待优化事项.md
@@ -98,7 +98,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 每个服务增加权限标识，openfeign增加header
 - [ ] 模板\邮件\短信
 - [ ] 定时任务代码补充
-- [ ] 多租户改造，升级为saas系统
+- [x] 多租户改造，升级为saas系统
 - [ ] 增加请求链路。一站式监控（构建日志系统）
 - [ ] 基于mq的分布式事务实现（优化审批流程，响应时间过长的问题），开新分支开发
 - [x] rocketmq代码有问题，需要花点时间（springboot 3.0有点问题）
@@ -107,3 +107,5 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 更新readme预览图片
 - [x] 各个dto增加判空
 - [ ] 流式查询优化
+- [ ] saveBatch代码替换掉
+- [ ] 租户再多，需要对boot_sys_user分库分表,因此引入ShardingSphere
