--- a/待优化事项.md
+++ b/待优化事项.md
@@ -108,4 +108,5 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 各个dto增加判空
 - [ ] 流式查询优化
 - [ ] saveBatch代码替换掉
-- [ ] 租户再多，需要对boot_sys_user分库分表,因此引入ShardingSphere
+- [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere
+- [ ] 代码增加注释
