refactor: 账号强制踢出，只允许一个账号在一处登录

--- a/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages_en_US.properties
+++ b/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages_en_US.properties
@@ -22,7 +22,7 @@
 10018=The export failed with the model ID {0}
 10019=Please upload a file
 10020=token cannot be empty
-10021=token is invalid, please log in again
+10021=Token has expired, please log in again
 10022=The account has been locked
 10023=Please upload zip, bar, bpmn, bpmn20.xml format file
 10024=Failed to upload file {0}
