--- a/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages_zh_TW.properties
+++ b/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages_zh_TW.properties
@@ -22,7 +22,7 @@
 10018=\u5C0E\u51FA\u5931\u6557\uFF0C\u6A21\u578BID\u70BA{0}
 10019=\u8ACB\u4E0A\u50B3\u6587\u4EF6
 10020=token\u4E0D\u80FD\u70BA\u7A7A
-10021=token\u5931\u6548\uFF0C\u8ACB\u91CD\u65B0\u767B\u9304
+10021=token已過期，請重新登錄
 10022=\u8CEC\u865F\u5DF2\u88AB\u9396\u5B9A
 10023=\u8ACB\u4E0A\u50B3zip\u3001bar\u3001bpmn\u3001bpmn20.xml\u683C\u5F0F\u6587\u4EF6
 10024=\u4E0A\u50B3\u6587\u4EF6\u5931\u6557{0}
