--- a/待优化事项.md
+++ b/待优化事项.md
@@ -17,13 +17,13 @@ https://blog.csdn.net/qq_40673687/article/details/103588011
 - [ ] 微信公众号
 - [ ] sql优化
 - [ ] 工作流绘制页面
-- [ ] 升级swagger-ui https://github.com/springdoc/springdoc-openapi(https://www.cnblogs.com/xiao2shiqi/p/16383896.html)
+- [x] 升级swagger-ui https://github.com/springdoc/springdoc-openapi(https://www.cnblogs.com/xiao2shiqi/p/16383896.html)
 - [ ] laokou-sms 需要增加内容
 - [ ] laokou-mail 需要增加内容
 - [ ] laokou-job 需要增加内容（admin管理）
 - [ ] laokou-generator 需要增加内容
 - [x] 新增laokou-activity/laokou-flowable(workflow) 把代码从laokou-admin剥离出来 < launch、audit、claim、unclaim、diagram > task、definition< WorkTask或WorkDefinition（feign）assignee + diagramResource<AssigneeDTO AssigneeVO>
-- [ ] 数据权限改为sql拦截的
+- [x] 数据权限改为sql拦截的
 - [x] https://www.shuzhiduo.com/A/1O5EjjP3d7/  
 https://blog.csdn.net/greek7777/article/details/127380370  
 laokou-cas -> laokou-ump laokou-auth + laokou-oauth2串联，生成token， 
@@ -40,8 +40,8 @@ feign（用一个对象存储BaseUserVO）
 - [ ] 待学习（https://blog.csdn.net/yry0304/article/details/108687426）管理学
 - [ ] 学习StopWatch 优化计时 （https://www.jb51.net/article/233720.htm）
 - [x] 服务之间开启basic认证（没搞成功,需要进一步找原因）(废弃)
-- [ ] Sharding-JDBC处理资源表
-- [ ] laokou-admin 集成spring-cache + redis （读多写少）
+- [x] Sharding-JDBC处理资源表（废弃）
+- [x] laokou-admin 集成spring-cache + redis （读多写少）
 https://blog.csdn.net/qq_31905135/article/details/123837390
  https://blog.csdn.net/NewBeeMu/article/details/121162790 （修改redis的set）
 - [x] 修改登录日志实现方式
@@ -56,13 +56,13 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 检查代码，避免太多的包装循环，很影响性能，采用基本数据类型
 - [x] 重写设计模式（interface > abstaract）
 - [ ] 修改前端markdown样式(https://zhuanlan.zhihu.com/p/556278953)
-- [ ] try-with-resources 代替 try-catch-finally
+- [x] try-with-resources 代替 try-catch-finally
 - [x] 敏感数据-密码不进行序列号 采用transient修饰
 - [ ] 思考路怎么走》》》》》》》》》》》》》》》》》》》》》》》》》》最最重要
 - [ ] 资源下载操作
 - [x] kafka替换成rocketmq，为什么要替换？原因有以下两点，1.后期偏向业务，而且日志数据不是很多，用rocketmq好一点，2.数据实时并且支持重试，不然状态没法更新（https://blog.csdn.net/weixin_45537947/article/details/121802700）
 - [ ] docker安装rocketmq和docker-compose（https://www.jb51.net/article/229157.htm）（https://www.jianshu.com/p/9ed30a99a50a）
-- [ ] 对照官网修改springsecurity，间接升级版本（https://spring.io/projects/spring-security）
+- [x] 对照官网修改springsecurity，间接升级版本（https://spring.io/projects/spring-security）
 - [ ] 有点意思（https://gitee.com/majz0908/jarboot?utm_source=poper_profile）
 - [x] 3.0.0升级（因3.0.0是一个大版本，前期的准备工作比较多，而且剔除了过期的接口，改的很多，需要发点时间）（优先级最低，不着急）(框架限制-oauth2密码模式，无法升级，只能在另一套阿里巴巴项目上面升到3.0.0)（迎难而上，不怕失败）(用provider，能够升级)（有新思路啦）（https://blog.csdn.net/tu_wer/article/details/124872706 + https://docs.spring.io/spring-authorization-server/docs/1.0.0/reference/html/core-model-components.html#registered-client）
 - [ ] mybatis有这样的扩展类TypeHandler，然后根据这个写了个JasyptMybatisHandler
@@ -70,7 +70,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 其他依赖升级（保证最新）
 - [x] im增加message数据插入（mysql）（丢弃）
 - [x] 审批 > 审批日志表
-- [ ] 同步数据时带上时间戳（key = 业务key + 时间戳），防止redis出现死锁（分布式锁相关内容） + [spEL学习](https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#expressions)
+- [x] 同步数据时带上时间戳（key = 业务key + 时间戳），防止redis出现死锁（分布式锁相关内容） + [spEL学习](https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#expressions)
 - [ ] java架构之道，往架构方向不断前进，绘图，原理，源码，设计（冲冲冲）
 - [x] 审批时把资源相关详情查询出来
 - [x] 增加一个临时表，用来回滚资源审批不通过的资源信息
