--- a/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages_zh_CN.properties
+++ b/laokou-common/laokou-common-swagger/src/main/resources/i18n/messages_zh_CN.properties
@@ -22,7 +22,7 @@
 10018=\u5BFC\u51FA\u5931\u8D25\uFF0C\u6A21\u578BID\u4E3A{0}
 10019=\u8BF7\u4E0A\u4F20\u6587\u4EF6
 10020=token\u4E0D\u80FD\u4E3A\u7A7A
-10021=token已过期，请重新登录
+10021=登录状态已过期，请重新登录
 10022=\u8D26\u53F7\u5DF2\u88AB\u9501\u5B9A
 10023=\u8BF7\u4E0A\u4F20zip\u3001bar\u3001bpmn\u3001bpmn20.xml\u683C\u5F0F\u6587\u4EF6
 10024=\u4E0A\u4F20\u6587\u4EF6\u5931\u8D25{0}
