--- a/待优化事项.md
+++ b/待优化事项.md
@@ -106,8 +106,8 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] laokou-log模块
 - [ ] 更新readme预览图片
 - [x] 各个dto增加判空
-- [ ] 流式查询优化
-- [ ] saveBatch代码替换掉
+- [x] 流式查询优化
+- [x] saveBatch代码替换掉
 - [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere
 - [ ] 代码增加注释
 - [x] elasticsearch数组改造（废弃）
