--- a/待优化事项.md
+++ b/待优化事项.md
@@ -1,5 +1,5 @@
 - [ ] websocket改为netty实现(https://gitee.com/bluexsx/box-im)（https://gitee.com/hulang1024/online-chess）
-- [ ] 分布式事务 （Hmily > https://gitee.com/dromara/hmily）
+- [x] 分布式事务 （Hmily > https://gitee.com/dromara/hmily）(废弃已采用seata)
 - [ ] docker部署升级为kubernates
 - [ ] jvm调优
 - [ ] kafka+efk收集日志(
@@ -15,7 +15,7 @@ https://blog.csdn.net/qq_40673687/article/details/103588011
 - [ ] 优化redis工具类（string、set、zset、hash、list） https://www.cnblogs.com/dijia478/p/8058775.html
 - [ ] 用户地图（百度地图api + 数据库ip + mongodb）
 - [ ] 微信公众号
-- [ ] sql优化
+- [x] sql优化
 - [ ] 工作流绘制页面
 - [x] 升级swagger-ui https://github.com/springdoc/springdoc-openapi(https://www.cnblogs.com/xiao2shiqi/p/16383896.html)
 - [ ] laokou-sms 需要增加内容
@@ -34,7 +34,7 @@ feign（用一个对象存储BaseUserVO）
 设计模式 分开写 resource方法不用删掉 （https://blog.csdn.net/web15185420056/article/details/125243200）(废弃)
 - [ ] 优雅下机
 - [ ] gateway增加黑名单 RemoteAddrRoutePredicateFactory
-- [ ] https://www.seniverse.com/widget?source=widgetV2（天气插件）
+- [x] https://www.seniverse.com/widget?source=widgetV2（天气插件）
 - [ ] https://www.throwx.cn/archives/page/15/ （获取灵感，充电蓄能）
 - [ ] 万物互生（根据模板生成数据）
 - [ ] 待学习（https://blog.csdn.net/yry0304/article/details/108687426）管理学
@@ -108,6 +108,6 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 各个dto增加判空
 - [x] 流式查询优化
 - [x] saveBatch代码替换掉
-- [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere
+- [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere(需要等5.3.2发包)
 - [ ] 代码增加注释
 - [x] elasticsearch数组改造（废弃）
