--- a/待优化事项.md
+++ b/待优化事项.md
@@ -108,6 +108,6 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 各个dto增加判空
 - [x] 流式查询优化
 - [x] saveBatch代码替换掉
-- [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere(需要等5.3.2发包)
+- [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere(需要等官网5.3.2发包，3.0 jdbc版本太低，无法适配本项目的oauth2.1)
 - [ ] 代码增加注释
 - [x] elasticsearch数组改造（废弃）
