refactor: 更新已完成的事项

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -18,8 +18,8 @@ https://blog.csdn.net/qq_40673687/article/details/103588011
 - [x] sql优化
 - [ ] 工作流绘制页面
 - [x] 升级swagger-ui https://github.com/springdoc/springdoc-openapi(https://www.cnblogs.com/xiao2shiqi/p/16383896.html)
-- [ ] laokou-sms 需要增加内容
-- [ ] laokou-mail 需要增加内容
+- [x] laokou-sms 需要增加内容
+- [x] laokou-mail 需要增加内容
 - [ ] laokou-job 需要增加内容（admin管理）
 - [ ] laokou-generator 需要增加内容
 - [x] 新增laokou-activity/laokou-flowable(workflow) 把代码从laokou-admin剥离出来 < launch、audit、claim、unclaim、diagram > task、definition< WorkTask或WorkDefinition（feign）assignee + diagramResource<AssigneeDTO AssigneeVO>
@@ -74,16 +74,16 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] java架构之道，往架构方向不断前进，绘图，原理，源码，设计（冲冲冲）
 - [x] 审批时把资源相关详情查询出来
 - [x] 增加一个临时表，用来回滚资源审批不通过的资源信息
-- [ ] rocketmq增加事务（半消息）防止消息丢失（核心数据/涉及订单）（api购买）
+- [x] rocketmq增加事务（半消息）防止消息丢失（核心数据/涉及订单）（api购买）(废弃)
 - [x] 减少公共类，单独出来(废弃，发现引用client能减少重复代码，还是提倡代码复用)
 - [x] 增加laokou-log服务，专门用来存储日志（登录、操作、审批、同步等等数据）
 - [x] 修改状态后，其他异步（链路过长优化）
 - [x] 增加数据同步日志（创建索引和同步数据分开）（一天只能同步一次然后锁定按钮，必须同步成功，后台加校验）(废弃)
 - [x] 数据库表设置版本号
 - [x] 日志导出
-- [ ] netty实现文件服务
+- [x] netty实现文件服务（废弃）
 - [ ] swagger注解补充
-- [ ] s3配置页面
+- [x] s3配置页面
 - [ ] 灰度发布（全链路灰色路由）
 - [ ] 字段脱敏、字段加密
 - [x] 中间表增加主键,废弃
@@ -95,12 +95,11 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 使用vuepress写springcloudalibab手册（挂静态页面）
 - [x] 更新readme的图片
 - [x] 更新数据库表接口-2023/1/19
-- [ ] 每个服务增加权限标识，openfeign增加header
+- [x] 每个服务增加权限标识，openfeign增加header
 - [x] 邮件\短信
 - [ ] 定时任务代码补充(power job要2024才发版jdk17，这段时间刚好复习)
 - [x] 多租户改造，升级为saas系统
 - [ ] 增加请求链路。一站式监控（构建日志系统）
-- [ ] 基于mq的分布式事务实现（优化审批流程，响应时间过长的问题），开新分支开发
 - [x] rocketmq代码有问题，需要花点时间（springboot 3.0有点问题）
 - [x] springboot自动配置 starter
 - [x] laokou-log模块
