--- a/待优化事项.md
+++ b/待优化事项.md
@@ -110,5 +110,5 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere(需要等官网5.3.2发包，3.0 jdbc版本太低，无法适配本项目的oauth2.1)
 - [ ] 代码增加注释
 - [x] elasticsearch数组改造（废弃）
-- [ ] flowable优化（https://blog.csdn.net/Commander_Officer/article/details/108768261）(去掉没必要代码)（增加委派）
+- [ ] flowable优化（https://blog.csdn.net/Commander_Officer/article/details/108768261）(去掉没必要代码)（增加委派+转派）
 - [ ] openfeign优化（http://www.amoyiki.com/post/Spring-Cloud-4-Feign-slow.html?ivk_sa=1024320u） 
