--- a/待优化事项.md
+++ b/待优化事项.md
@@ -92,7 +92,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
                                         -> OAuth2AuthorizationCodeAuthenticationProvider
                                         -> OAuth2TokenEndpointFilter（sendAccessTokenResponse）
                                         优化sas
-- [ ] 使用vuepress写springcloudalibab手册（挂静态页面）
+- [x] 使用vuepress写springcloudalibab手册（挂静态页面）
 - [x] 更新readme的图片
 - [x] 更新数据库表接口-2023/1/19
 - [x] 每个服务增加权限标识，openfeign增加header
@@ -112,4 +112,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] elasticsearch数组改造（废弃）
 - [x] 升级为httpclient5
 - [ ] flowable优化（https://blog.csdn.net/Commander_Officer/article/details/108768261）(去掉没必要代码)（增加委派+转派） (https://www.flowable.com/open-source/docs/bpmn/ch03-Configuration#job-executor-from-version-600-onwards)
-- [ ] openfeign优化（http://www.amoyiki.com/post/Spring-Cloud-4-Feign-slow.html?ivk_sa=1024320u） 
+- [ ] openfeign优化（http://www.amoyiki.com/post/Spring-Cloud-4-Feign-slow.html?ivk_sa=1024320u）
