--- a/待优化事项.md
+++ b/待优化事项.md
@@ -92,7 +92,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
                                         -> OAuth2AuthorizationCodeAuthenticationProvider
                                         -> OAuth2TokenEndpointFilter（sendAccessTokenResponse）
                                         优化sas
-- [x] 使用vuepress写springcloudalibab手册（挂静态页面）
+- [x] 使用vuepress写springcloudalibab手册（挂静态页面）（已搭建完毕，需要填充内容）
 - [x] 更新readme的图片
 - [x] 更新数据库表接口-2023/1/19
 - [x] 每个服务增加权限标识，openfeign增加header
