--- a/待优化事项.md
+++ b/待优化事项.md
@@ -33,7 +33,7 @@ laokou-cas 集成集成spring-security-cas  (laokou-ump负责鉴权、laokou-aut
 feign（用一个对象存储BaseUserVO）
 设计模式 分开写 resource方法不用删掉 （https://blog.csdn.net/web15185420056/article/details/125243200）(废弃)
 - [ ] 优雅下机
-- [ ] gateway增加黑名单 RemoteAddrRoutePredicateFactory
+- [x] gateway增加黑名单 RemoteAddrRoutePredicateFactory
 - [x] https://www.seniverse.com/widget?source=widgetV2（天气插件）
 - [ ] https://www.throwx.cn/archives/page/15/ （获取灵感，充电蓄能）
 - [ ] 万物互生（根据模板生成数据）
