refactor: 统一错误码提交

--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
@@ -17,3 +17,9 @@
 2007=帐户或密码错误，请重新输入
 2008=用户没有权限访问，请联系管理员
 2009=密码不能为空
+2010=手机号不能为空
+2011=手机号错误，请重新输入
+2012=邮箱不能为空
+2013=邮箱错误，请重新输入
+2014=租户不能为空，请选择租户
+2015=无效作用域
