--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/validation.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/validation.properties
@@ -13,9 +13,8 @@
 #  * See the License for the specific language governing permissions and
 #  * limitations under the License.
 #  */
-#\u7E41\u4F53\u4E2D\u6587
-sys.user.username.require=\u7528\u6236\u540D\u4E0D\u80FD\u70BA\u7A7A
-sys.user.password.require=\u5BC6\u78BC\u4E0D\u80FD\u70BA\u7A7A
-sys.role.name.require=\u89D2\u8272\u540D\u7A31\u4E0D\u80FD\u70BA\u7A7A
-sys.menu.pid.require=\u8ACB\u9078\u64C7\u7236\u7D1A\u83DC\u55AE
-sys.menu.name.require=\u83DC\u55AE\u540D\u7A31\u4E0D\u80FD\u70BA\u7A7A
+sys.user.username.require=用户名不能为空
+sys.user.password.require=密码不能为空
+sys.role.name.require=角色名称不能为空
+sys.menu.pid.require=请选择父级菜单
+sys.menu.name.require=菜单名称不能为空
