--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/validation_zh_CN.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/validation_zh_CN.properties
@@ -13,9 +13,8 @@
 #  * See the License for the specific language governing permissions and
 #  * limitations under the License.
 #  */
-#\u7B80\u4F53\u4E2D\u6587
-sys.user.username.require=\u7528\u6237\u540D\u4E0D\u80FD\u4E3A\u7A7A
-sys.user.password.require=\u5BC6\u7801\u4E0D\u80FD\u4E3A\u7A7A
-sys.role.name.require=\u89D2\u8272\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
-sys.menu.pid.require=\u8BF7\u9009\u62E9\u7236\u7EA7\u83DC\u5355
-sys.menu.name.require=\u83DC\u5355\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+sys.user.username.require=用户名不能为空
+sys.user.password.require=密码不能为空
+sys.role.name.require=角色名称不能为空
+sys.menu.pid.require=请选择父级菜单
+sys.menu.name.require=菜单名称不能为空
