--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_zh_CN.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_zh_CN.properties
@@ -21,7 +21,7 @@
 500=服务器内部错误，无法完成请求
 503=服务正在维护，请联系管理员
 1001=请求过于频繁，请稍后再试
-1002=服务未知错误
+1002=未知错误
 1003=IP被列入黑名单，请联系管理员
 2001=唯一标识不能为空
 2002=验证码不能为空
