--- a/待优化事项.md
+++ b/待优化事项.md
@@ -112,7 +112,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 改进ConvertUtil
 - [x] elasticsearch数组改造（废弃）
 - [x] 升级为httpclient5
-- [ ] flowable优化（https://blog.csdn.net/Commander_Officer/article/details/108768261）(去掉没必要代码)（增加委派+转派） (https://www.flowable.com/open-source/docs/bpmn/ch03-Configuration#job-executor-from-version-600-onwards)
+- [x] flowable优化（https://blog.csdn.net/Commander_Officer/article/details/108768261）(去掉没必要代码)（增加委派+转派） (https://www.flowable.com/open-source/docs/bpmn/ch03-Configuration#job-executor-from-version-600-onwards)
 - [x] openfeign优化（http://www.amoyiki.com/post/Spring-Cloud-4-Feign-slow.html?ivk_sa=1024320u）
 - [ ] 增加索引(明天增加其他的索引和升级boot版本 2023/2/23记)
 - [ ] 修改路由auth规则(验证码)
