refactor: 增加微信模块和banner公共模块，以及代码优化

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -59,7 +59,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] try-with-resources 代替 try-catch-finally
 - [x] 敏感数据-密码不进行序列号 采用transient修饰
 - [ ] 思考路怎么走》》》》》》》》》》》》》》》》》》》》》》》》》》最最重要
-- [ ] 资源下载操作
+- [x] 资源下载操作
 - [x] kafka替换成rocketmq，为什么要替换？原因有以下两点，1.后期偏向业务，而且日志数据不是很多，用rocketmq好一点，2.数据实时并且支持重试，不然状态没法更新（https://blog.csdn.net/weixin_45537947/article/details/121802700）
 - [ ] docker安装rocketmq和docker-compose（https://www.jb51.net/article/229157.htm）（https://www.jianshu.com/p/9ed30a99a50a）
 - [x] 对照官网修改springsecurity，间接升级版本（https://spring.io/projects/spring-security）
