--- a/待优化事项.md
+++ b/待优化事项.md
@@ -109,7 +109,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] saveBatch代码替换掉
 - [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere(需要等官网5.3.2发包，3.0 jdbc版本太低，无法适配本项目的oauth2.1)
 - [ ] 代码增加注释
-- [ ] 改进ConvertUtil
+- [x] 改进ConvertUtil
 - [x] elasticsearch数组改造（废弃）
 - [x] 升级为httpclient5
 - [x] flowable优化（https://blog.csdn.net/Commander_Officer/article/details/108768261）(去掉没必要代码)（增加委派+转派） (https://www.flowable.com/open-source/docs/bpmn/ch03-Configuration#job-executor-from-version-600-onwards)
