--- a/待优化事项.md
+++ b/待优化事项.md
@@ -65,7 +65,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 对照官网修改springsecurity，间接升级版本（https://spring.io/projects/spring-security）
 - [ ] 有点意思（https://gitee.com/majz0908/jarboot?utm_source=poper_profile）
 - [x] 3.0.0升级（因3.0.0是一个大版本，前期的准备工作比较多，而且剔除了过期的接口，改的很多，需要发点时间）（优先级最低，不着急）(框架限制-oauth2密码模式，无法升级，只能在另一套阿里巴巴项目上面升到3.0.0)（迎难而上，不怕失败）(用provider，能够升级)（有新思路啦）（https://blog.csdn.net/tu_wer/article/details/124872706 + https://docs.spring.io/spring-authorization-server/docs/1.0.1/reference/html/core-model-components.html#registered-client）
-- [ ] mybatis有这样的扩展类TypeHandler，然后根据这个写了个JasyptMybatisHandler
+- [x] mybatis有这样的扩展类TypeHandler
 - [x] 分片上传（废弃，本项目不引入）
 - [x] 其他依赖升级（保证最新）
 - [x] im增加message数据插入（mysql）（丢弃）
@@ -85,7 +85,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] swagger注解补充
 - [x] s3配置页面
 - [ ] 灰度发布（全链路灰色路由）
-- [ ] 字段脱敏、字段加密
+- [x] 字段脱敏、字段加密
 - [x] 中间表增加主键,废弃
 - [x] sas原理：OAuth2TokenEndpointFilter -> OAuth2AuthorizationCodeAuthenticationConverter 
                                         -> OAuth2AuthorizationCodeAuthenticationToken 
