refactor: 提交数据库设计文档

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -32,7 +32,7 @@ AbstractAuthenticationProcessingFilter > OAuth2ClientAuthenticationProcessingFil
 laokou-cas 集成集成spring-security-cas  (laokou-ump负责鉴权、laokou-auth\laokou-oauth2\laokou-cas负责生成token，不负责存储)  
 feign（用一个对象存储BaseUserVO）
 设计模式 分开写 resource方法不用删掉 （https://blog.csdn.net/web15185420056/article/details/125243200）(废弃)
-- [ ] 优雅下机
+- [ ] 优雅下机，销毁回调释放资源
 - [x] gateway增加黑名单 RemoteAddrRoutePredicateFactory
 - [x] https://www.seniverse.com/widget?source=widgetV2（天气插件）
 - [ ] https://www.throwx.cn/archives/page/15/ （获取灵感，充电蓄能）
