--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_zh_CN.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_zh_CN.properties
@@ -36,4 +36,12 @@
 2011=手机号错误，请重新输入
 2012=邮箱不能为空
 2013=邮箱错误，请重新输入
+2014=租户编号不能为空，请选择租户
+2015=无效作用域
 5001=接口已被限流，请稍后再试
+6001=签名未报备，请检查签名
+6002=签名不可用，请检查签名
+6003=短信内容包含敏感词，请重新输入
+6004=短信内容过长，请重新输入
+6005=模板编号不存在，请重新选择模板
+6006=验证未通过，请核对相关信息
