--- a/待优化事项.md
+++ b/待优化事项.md
@@ -116,3 +116,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] openfeign优化（http://www.amoyiki.com/post/Spring-Cloud-4-Feign-slow.html?ivk_sa=1024320u）
 - [x] 增加索引(明天增加其他的索引和升级boot版本 2023/2/23记)
 - [x] 修改路由auth规则(验证码)
+- [ ] rocketmq替代seata的分布式事务，完成核心功能改造，系统相关的日志（审批、登录、操作、上传）还是采用事件机制的方式，不引入中间件
