--- a/待优化事项.md
+++ b/待优化事项.md
@@ -117,3 +117,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 增加索引(明天增加其他的索引和升级boot版本 2023/2/23记)
 - [x] 修改路由auth规则(验证码)
 - [ ] rocketmq替代seata的分布式事务，完成核心功能改造
+- [ ] 参考美团GTIS防重系统
