--- a/待优化事项.md
+++ b/待优化事项.md
@@ -118,4 +118,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 修改路由auth规则(验证码)
 - [ ] rocketmq替代seata的分布式事务，完成核心功能改造
 - [ ] 参考美团GTIS防重系统
-- [ ] 所有的类都进行自动装配
+- [ ] 大部分公共类都进行自动装配
