--- a/待优化事项.md
+++ b/待优化事项.md
@@ -107,7 +107,7 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 各个dto增加判空
 - [x] 流式查询优化
 - [x] saveBatch代码替换掉
-- [ ] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere(需要等官网5.3.2发包，3.0 jdbc版本太低，无法适配本项目的oauth2.1)
+- [x] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere(需要等官网5.3.2发包，3.0 jdbc版本太低，无法适配本项目的oauth2.1)
 - [ ] 代码增加注释
 - [x] 改进ConvertUtil
 - [x] elasticsearch数组改造（废弃）
@@ -116,6 +116,6 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] openfeign优化（http://www.amoyiki.com/post/Spring-Cloud-4-Feign-slow.html?ivk_sa=1024320u）
 - [x] 增加索引(明天增加其他的索引和升级boot版本 2023/2/23记)
 - [x] 修改路由auth规则(验证码)
-- [ ] rocketmq替代seata的分布式事务，完成核心功能改造
+- [x] rocketmq替代seata的分布式事务，完成核心功能改造(废弃，只能使用seata，rocketmq已封装成公共组件)
 - [ ] 参考美团GTIS防重系统
-- [ ] 大部分公共类都进行自动装配
+- [x] 大部分公共类都进行自动装配
