--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
@@ -28,7 +28,7 @@
 2003=验证码错误，请重新输入
 2004=验证码已过期
 2005=账号不能为空
-2006=账号已被停用
+2006=账号已被锁定，请联系管理员
 2007=帐户或密码错误，请重新输入
 2008=用户没有权限访问，请联系管理员
 2009=密码不能为空
@@ -39,6 +39,8 @@
 2014=租户编号不能为空，请选择租户
 2015=无效作用域
 2016=无效客户端
+2017=已被强制踢出，请重新登录
+2018=系统繁忙，请刷新页面
 5001=接口已被限流，请稍后再试
 6001=签名未报备，请检查签名
 6002=签名不可用，请检查签名
