--- a/待优化事项.md
+++ b/待优化事项.md
@@ -119,3 +119,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] rocketmq替代seata的分布式事务，完成核心功能改造(废弃，只能使用seata，rocketmq已封装成公共组件)
 - [ ] 参考美团GTIS防重系统
 - [x] 大部分公共类都进行自动装配
+- [ ] 修改server
