refactor: 修改logback-spring.xml

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -123,4 +123,5 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 封装相关算法组件
 - [ ] 定义插件扩展nacos
 - [ ] log4j2的扩展
-- [ ] mybatis生成id
+- [x] mybatis生成id
+- [x] logback配置（https://blog.csdn.net/weixin_72518095/article/details/125707612）
