feat：修改工具类

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -125,3 +125,5 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] log4j2的扩展
 - [x] mybatis生成id
 - [x] logback配置（https://blog.csdn.net/weixin_72518095/article/details/125707612）
+- [ ] 增加注解（ConstraintValidator 正则表达式）
+- [ ] 国际化Accept-Language（LocaleResolver）
