--- a/待优化事项.md
+++ b/待优化事项.md
@@ -126,4 +126,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] mybatis生成id
 - [x] logback配置（https://blog.csdn.net/weixin_72518095/article/details/125707612）
 - [ ] 增加注解（ConstraintValidator 正则表达式）
-- [ ] 国际化Accept-Language（LocaleResolver）
+- [x] 国际化Accept-Language(根据请求头)
