--- a/待优化事项.md
+++ b/待优化事项.md
@@ -127,3 +127,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] logback配置（https://blog.csdn.net/weixin_72518095/article/details/125707612）
 - [ ] 增加注解（ConstraintValidator 正则表达式）
 - [x] 国际化Accept-Language(根据请求头)
+- [ ] log对接kafka和rocketmq
