--- a/待优化事项.md
+++ b/待优化事项.md
@@ -120,12 +120,12 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] 参考美团GTIS防重系统
 - [x] 大部分公共类都进行自动装配
 - [x] 修改server
-- [ ] 封装相关算法组件
+- [x] 封装相关算法组件
 - [ ] 定义插件扩展nacos
 - [ ] log4j2的扩展
 - [x] mybatis生成id
 - [x] logback配置（https://blog.csdn.net/weixin_72518095/article/details/125707612）
 - [ ] 增加注解（ConstraintValidator 正则表达式）
 - [x] 国际化Accept-Language(根据请求头)
-- [ ] log对接kafka和rocketmq
+- [x] log对接kafka和rocketmq
 - [ ] Iot相关协议封装（MQTT等）
