--- a/待优化事项.md
+++ b/待优化事项.md
@@ -129,3 +129,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] 国际化Accept-Language(根据请求头)
 - [x] log对接kafka和rocketmq
 - [ ] Iot相关协议封装（MQTT等）
+- [ ] 敏感词过滤
