--- a/待优化事项.md
+++ b/待优化事项.md
@@ -130,3 +130,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [x] log对接kafka和rocketmq
 - [ ] Iot相关协议封装（MQTT等）
 - [ ] 敏感词过滤
+- [ ] logback共存（https://blog.csdn.net/qq_44836294/article/details/107579360）
