--- a/待优化事项.md
+++ b/待优化事项.md
@@ -131,3 +131,4 @@ tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，
 - [ ] Iot相关协议封装（MQTT等）
 - [ ] 敏感词过滤
 - [ ] logback共存（https://blog.csdn.net/qq_44836294/article/details/107579360）
+- [ ] es旧API替换掉
