refactor: 修改文字描述

--- a/待优化事项.md
+++ b/待优化事项.md
@@ -1,133 +1,26 @@
-- [ ] websocket改为netty实现(https://gitee.com/bluexsx/box-im)（https://gitee.com/hulang1024/online-chess）
-- [x] 分布式事务 （Hmily > https://gitee.com/dromara/hmily）(废弃已采用seata)
 - [ ] docker部署升级为kubernates
-- [ ] jvm调优
-- [x] kafka+efk收集日志(
-
-https://blog.csdn.net/sinat_26594945/article/details/115321633?spm=1001.2101.3001.6650.4&utm_medium=distribute.wap_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromBaidu%7ERate-4-115321633-blog-120024594.wap_blog_relevant_default&depth_1-utm_source=distribute.wap_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromBaidu%7ERate-4-115321633-blog-120024594.wap_blog_relevant_default
-
-https://blog.csdn.net/weixin_43627706
-
-https://blog.csdn.net/qq_40673687/article/details/103588011
-
-)
+- [ ] jvm参数调整
 - [ ] 编写springcloud学习手册 http://doc.ruoyi.vip/ruoyi-cloud/cloud/auth.html#%E5%9F%BA%E6%9C%AC%E4%BB%8B%E7%BB%8D
 - [ ] 优化redis工具类（string、set、zset、hash、list） https://www.cnblogs.com/dijia478/p/8058775.html
 - [ ] 用户地图（百度地图api + 数据库ip + mongodb）
 - [ ] 微信公众号
-- [x] sql优化
 - [ ] 工作流绘制页面
-- [x] 升级swagger-ui https://github.com/springdoc/springdoc-openapi(https://www.cnblogs.com/xiao2shiqi/p/16383896.html)
-- [x] laokou-sms 需要增加内容
-- [x] laokou-mail 需要增加内容
-- [x] laokou-job 需要增加内容（admin管理）（已废弃）
 - [ ] laokou-generator 需要增加内容
-- [x] 新增laokou-activity/laokou-flowable(workflow) 把代码从laokou-admin剥离出来 < launch、audit、claim、unclaim、diagram > task、definition< WorkTask或WorkDefinition（feign）assignee + diagramResource<AssigneeDTO AssigneeVO>
-- [x] 数据权限改为sql拦截的
-- [x] https://www.shuzhiduo.com/A/1O5EjjP3d7/  
-https://blog.csdn.net/greek7777/article/details/127380370  
-laokou-cas -> laokou-ump laokou-auth + laokou-oauth2串联，生成token， 
-AbstractAuthenticationProcessingFilter > OAuth2ClientAuthenticationProcessingFilter > AuthenticationDetailsSource > WebAuthenticationDetailsSource > 自定义source  
-开启spring security响应式编程 https://blog.csdn.net/MXC1146/article/details/118342402  
-laokou-cas 集成集成spring-security-cas  (laokou-ump负责鉴权、laokou-auth\laokou-oauth2\laokou-cas负责生成token，不负责存储)  
-feign（用一个对象存储BaseUserVO）
-设计模式 分开写 resource方法不用删掉 （https://blog.csdn.net/web15185420056/article/details/125243200）(废弃)
 - [ ] 优雅下机，销毁回调释放资源
-- [x] gateway增加黑名单 RemoteAddrRoutePredicateFactory
-- [x] https://www.seniverse.com/widget?source=widgetV2（天气插件）
 - [ ] https://www.throwx.cn/archives/page/15/ （获取灵感，充电蓄能）
 - [ ] 万物互生（根据模板生成数据）
 - [ ] 待学习（https://blog.csdn.net/yry0304/article/details/108687426）管理学
-- [x] 学习StopWatch 优化计时 （https://www.jb51.net/article/233720.htm）
-- [x] 服务之间开启basic认证（没搞成功,需要进一步找原因）(废弃)
-- [x] Sharding-JDBC处理资源表（废弃）
-- [x] laokou-admin 集成spring-cache + redis （读多写少）
-https://blog.csdn.net/qq_31905135/article/details/123837390
- https://blog.csdn.net/NewBeeMu/article/details/121162790 （修改redis的set）
-- [x] 修改登录日志实现方式
-- [x] oss管理
-- [x] 把没用的认证去掉，目前只支持密码（之前支持支付宝、单点登录、我后面想了一下，留接口扩展即可）
-- [x] 监听用户登录是否成功(@EventListener(AuthenticationSuccessEvent.class) > SysAuthApplicationServiceImpl (event)) '登录成功'(废弃)
-- [x] auth的相关信息改为i18n
-- [x] 替换tomcat https://www.cnblogs.com/nuccch/p/13672294.html https://cloud.tencent.com/developer/article/1549199
-tomcat为什么要替换成undertow（apr是快，但是打包的体积很大，而且比较消耗资源，安装也比较繁琐，undertow的吞吐量高，相对也比较耗资源，相比于apr的安装繁琐，我比较能接受）
-- [ ] 用netty重写laokou-im
-- [x] 存储过程开启事务(已废弃)
 - [ ] 检查代码，避免太多的包装循环，很影响性能，采用基本数据类型
-- [x] 重写设计模式（interface > abstaract）
 - [ ] 修改前端markdown样式(https://zhuanlan.zhihu.com/p/556278953)
-- [x] try-with-resources 代替 try-catch-finally
-- [x] 敏感数据-密码不进行序列号 采用transient修饰
-- [ ] 思考路怎么走》》》》》》》》》》》》》》》》》》》》》》》》》》最最重要
-- [x] 资源下载操作
-- [x] kafka替换成rocketmq，为什么要替换？原因有以下两点，1.后期偏向业务，而且日志数据不是很多，用rocketmq好一点，2.数据实时并且支持重试，不然状态没法更新（https://blog.csdn.net/weixin_45537947/article/details/121802700）
 - [ ] docker安装rocketmq和docker-compose（https://www.jb51.net/article/229157.htm）（https://www.jianshu.com/p/9ed30a99a50a）
-- [x] 对照官网修改springsecurity，间接升级版本（https://spring.io/projects/spring-security）
 - [ ] 有点意思（https://gitee.com/majz0908/jarboot?utm_source=poper_profile）
-- [x] 3.0.0升级（因3.0.0是一个大版本，前期的准备工作比较多，而且剔除了过期的接口，改的很多，需要发点时间）（优先级最低，不着急）(框架限制-oauth2密码模式，无法升级，只能在另一套阿里巴巴项目上面升到3.0.0)（迎难而上，不怕失败）(用provider，能够升级)（有新思路啦）（https://blog.csdn.net/tu_wer/article/details/124872706 + https://docs.spring.io/spring-authorization-server/docs/1.0.1/reference/html/core-model-components.html#registered-client）
-- [x] mybatis有这样的扩展类TypeHandler
-- [x] 分片上传（废弃，本项目不引入）
-- [x] 其他依赖升级（保证最新）
-- [x] im增加message数据插入（mysql）（丢弃）
-- [x] 审批 > 审批日志表
-- [x] 同步数据时带上时间戳（key = 业务key + 时间戳），防止redis出现死锁（分布式锁相关内容） + [spEL学习](https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#expressions)
-- [ ] java架构之道，往架构方向不断前进，绘图，原理，源码，设计（冲冲冲）
-- [x] 审批时把资源相关详情查询出来
-- [x] 增加一个临时表，用来回滚资源审批不通过的资源信息
-- [x] rocketmq增加事务（半消息）防止消息丢失（核心数据/涉及订单）（api购买）(废弃)
-- [x] 减少公共类，单独出来(废弃，发现引用client能减少重复代码，还是提倡代码复用)
-- [x] 增加laokou-log服务，专门用来存储日志（登录、操作、审批、同步等等数据）
-- [x] 修改状态后，其他异步（链路过长优化）
-- [x] 增加数据同步日志（创建索引和同步数据分开）（一天只能同步一次然后锁定按钮，必须同步成功，后台加校验）(废弃)
-- [x] 数据库表设置版本号
-- [x] 日志导出
-- [x] netty实现文件服务（废弃）
 - [ ] swagger注解补充
-- [x] s3配置页面
 - [ ] 灰度发布（全链路灰色路由）
-- [x] 字段脱敏、字段加密
-- [x] 中间表增加主键,废弃
-- [x] sas原理：OAuth2TokenEndpointFilter -> OAuth2AuthorizationCodeAuthenticationConverter 
-                                        -> OAuth2AuthorizationCodeAuthenticationToken 
-                                        -> OAuth2AuthorizationCodeAuthenticationProvider
-                                        -> OAuth2TokenEndpointFilter（sendAccessTokenResponse）
-                                        优化sas
-- [x] 使用vuepress写springcloudalibab手册（挂静态页面）（已搭建完毕，需要填充内容）
-- [x] 更新readme的图片
-- [x] 更新数据库表接口-2023/1/19
-- [x] 每个服务增加权限标识，openfeign增加header
-- [x] 邮件\短信
-- [x] 定时任务代码补充(power job要2024才发版jdk17，这段时间刚好复习)
-- [x] 多租户改造，升级为saas系统
-- [x] 增加请求链路。一站式监控（构建日志系统）
-- [x] rocketmq代码有问题，需要花点时间（springboot 3.0有点问题）
-- [x] springboot自动配置 starter
-- [x] laokou-log模块
-- [x] 更新readme预览图片
-- [x] 各个dto增加判空
-- [x] 流式查询优化
-- [x] saveBatch代码替换掉
-- [x] 租户超过几万，需要对boot_sys_user分库分表,因此引入ShardingSphere(需要等官网5.3.2发包，3.0 jdbc版本太低，无法适配本项目的oauth2.1)
 - [ ] 代码增加注释
-- [x] 改进ConvertUtil
-- [x] elasticsearch数组改造（废弃）
-- [x] 升级为httpclient5
-- [x] flowable优化（https://blog.csdn.net/Commander_Officer/article/details/108768261）(去掉没必要代码)（增加委派+转派） (https://www.flowable.com/open-source/docs/bpmn/ch03-Configuration#job-executor-from-version-600-onwards)
-- [x] openfeign优化（http://www.amoyiki.com/post/Spring-Cloud-4-Feign-slow.html?ivk_sa=1024320u）
-- [x] 增加索引(明天增加其他的索引和升级boot版本 2023/2/23记)
-- [x] 修改路由auth规则(验证码)
-- [x] rocketmq替代seata的分布式事务，完成核心功能改造(废弃，只能使用seata，rocketmq已封装成公共组件)
 - [ ] 参考美团GTIS防重系统
-- [x] 大部分公共类都进行自动装配
-- [x] 修改server
-- [x] 封装相关算法组件
 - [ ] 定义插件扩展nacos
 - [ ] log4j2的扩展
-- [x] mybatis生成id
-- [x] logback配置（https://blog.csdn.net/weixin_72518095/article/details/125707612）
 - [ ] 增加注解（ConstraintValidator 正则表达式）
-- [x] 国际化Accept-Language(根据请求头)
-- [x] log对接kafka和rocketmq
 - [ ] Iot相关协议封装（MQTT等）
 - [ ] 敏感词过滤
 - [ ] logback共存（https://blog.csdn.net/qq_44836294/article/details/107579360）
