feat：增加事务代码

--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -21,7 +21,7 @@
 500=Internal server error, unable to complete request
 503=The service is being maintained, please contact the administrator
 1001=Request too frequently, please try again later
-1002=unknown error
+1002=The request has been interrupted, please refresh the page
 1003=IP has been blacklisted, please contact the administrator
 2001=The unique identifier cannot be empty
 2002=The verification code cannot be empty
