--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -40,6 +40,10 @@
 2015=Invalid scope
 2016=Invalid client
 2017=Forced kicked out, please log in again
+2018=Login succeeded
+2019=The registration client does not exist
+2020=Token generator failed to generate access token
+2021=The token generator was unable to generate a refresh token
 5001=The interface has been restricted. Please try again later
 6001=Signature not reported, please check signature
 6002=Signature not available, please check the signature
