--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_zh_CN.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_zh_CN.properties
@@ -40,6 +40,10 @@
 2015=无效作用域
 2016=无效客户端
 2017=已被强制踢出，请重新登录
+2018=登录成功
+2019=注册客户端不存在
+2020=令牌生成器无法生成访问令牌
+2021=令牌生成器无法生成刷新令牌
 5001=接口已被限流，请稍后再试
 6001=签名未报备，请检查签名
 6002=签名不可用，请检查签名
