feat：auth cola改造

--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
@@ -18,6 +18,7 @@
 401=登录状态已过期，请重新登录
 403=访问拒绝，没有权限
 404=无法找到请求的资源
+429=请求太多，已被限流，请稍后再试
 500=服务器内部错误，无法完成请求
 503=服务正在维护，请联系管理员
 1001=请求过于频繁，请稍后再试
@@ -44,7 +45,6 @@
 2019=注册客户端不存在
 2020=令牌生成器无法生成访问令牌
 2021=令牌生成器无法生成刷新令牌
-5001=接口已被限流，请稍后再试
 6001=签名未报备，请检查签名
 6002=签名不可用，请检查签名
 6003=短信内容包含敏感词，请重新输入
