--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -18,6 +18,7 @@
 401=Login status has expired, please log in again
 403=Access denied without permission
 404=Unable to find the requested resource
+429=There are too many requests and they have been restricted. Please try again later
 500=Internal server error, unable to complete request
 503=The service is being maintained, please contact the administrator
 1001=Request too frequently, please try again later
@@ -44,7 +45,6 @@
 2019=The registration client does not exist
 2020=Token generator failed to generate access token
 2021=The token generator was unable to generate a refresh token
-5001=The interface has been restricted. Please try again later
 6001=Signature not reported, please check signature
 6002=Signature not available, please check the signature
 6003=The text message contains sensitive words, please re-enter
