feat: auth 生成 id_token

--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message.properties
@@ -45,6 +45,7 @@
 2019=注册客户端不存在
 2020=令牌生成器无法生成访问令牌
 2021=令牌生成器无法生成刷新令牌
+2022=令牌生成器无法生成标识令牌
 6001=签名未报备，请检查签名
 6002=签名不可用，请检查签名
 6003=短信内容包含敏感词，请重新输入
