--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -45,6 +45,7 @@
 2019=The registration client does not exist
 2020=Token generator failed to generate access token
 2021=The token generator was unable to generate a refresh token
+2022=Token generator failed to generate identity token
 6001=Signature not reported, please check signature
 6002=Signature not available, please check the signature
 6003=The text message contains sensitive words, please re-enter
