--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -24,7 +24,7 @@
 1001=Request too frequently, please try again later
 1002=The request has been interrupted, please refresh the page
 1003=IP has been blacklisted, please contact the administrator
-2001=The unique identifier cannot be empty
+2001=UUID cannot be empty
 2002=The verification code cannot be empty
 2003=Verification code error, please re-enter
 2004=Verification code has expired
@@ -37,7 +37,7 @@
 2011=Phone number error, please re-enter
 2012=Email cannot be empty
 2013=Email error, please re-enter
-2014=Tenant number cannot be empty, please select a tenant
+2014=Tenant ID cannot be empty
 2015=Invalid scope
 2016=Invalid client
 2017=Forced kicked out, please log in again
