--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_zh_CN.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_zh_CN.properties
@@ -24,20 +24,20 @@
 1001=请求过于频繁，请稍后再试
 1002=请求已中断，请刷新页面
 1003=IP被列入黑名单，请联系管理员
-2001=唯一标识不能为空
+2001=UUID不能为空
 2002=验证码不能为空
 2003=验证码错误，请重新输入
 2004=验证码已过期
 2005=账号不能为空
 2006=账号已被锁定，请联系管理员
-2007=帐户或密码错误，请重新输入
+2007=账号或密码错误，请重新输入
 2008=用户没有权限访问，请联系管理员
 2009=密码不能为空
 2010=手机号不能为空
 2011=手机号错误，请重新输入
 2012=邮箱不能为空
 2013=邮箱错误，请重新输入
-2014=租户编号不能为空，请选择租户
+2014=租户ID不能为空
 2015=无效作用域
 2016=无效客户端
 2017=已被强制踢出，请重新登录
