--- a/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
+++ b/laokou-common/laokou-common-i18n/src/main/resources/i18n/message_en_US.properties
@@ -46,6 +46,7 @@
 2020=Token generator failed to generate access token
 2021=The token generator was unable to generate a refresh token
 2022=Token generator failed to generate identity token
+3001=ID cannot be empty
 6001=Signature not reported, please check signature
 6002=Signature not available, please check the signature
 6003=The text message contains sensitive words, please re-enter
